2005-05-08 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b20

	* Fix: Custom fields were not set recursively (register globals issue)

	* Fix: remove Debug Code.

2005-05-06 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b19

	* Fix: RFE #1192462  (catch invalid manuell input of $set_AlbumListPage and $page via URL)

	* Change: minor tweak of getAlbum

2005-05-02 Stupid Tkotz <jens@peino.de>  1.5.1-cvs-b18

	* Fix: More typos. Sorry, next time i pay more attention.

2005-05-02 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b17

	* Fix: typo in classes/Album.php introduced in b16

2005-05-02 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b16

	* Change: Added 'nobody' as default permission set.
 	Thanks to Andrew A. Chen for this idea.

2005-04-28 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b15

	Fix: More spelling and validation fixes by Gaile in base.css

	Fix: Initialtab was not correct set in edit_apperance

	Fix: When editing properties via startpage the properties page broke after 2 apply.

2005-04-27 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b14

	* Fix: htmlMimeMail.php was checked in with the wrong line endings
	  which was causing the CVS build to fail on Windows.

2005-04-25 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b13

	* Fix: typos

	* Fix: Missing quoting in colorpicker.php

2005-04-25 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b12

	* Fix: css and html fixes. (found by Gaile)

2005-04-22 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b11

	* New: Added nice colorpicker for easy color setting.
	  Note: Coded and pictures were taken from the Horde Project (http://www.horde.org)
	
	* Fix: Use of depricated var in html/userData.inc

	* Change: Added hidden fields for sectionTabs that contains the current tab.
		  This enables us to highlight it, when reloading the page.

	* Change: Little Layout change in layout/commentdraw.inc

	* Change: former solution for Jmullan, broke HTML validality.
		  New solution: tweaked getPhotoTag() to accept attrs.
		