@@ -325,10 +325,9 @@ if ($gallery->user->canViewFullImages($gallery->album)) {
 				array('onchange' => 'reset_timer()', 'class' => 'adminform')
 			);
 
-
 if ($loop) {
-    $checked = ($defaultLoop) ? "checked" : "";
-    $iconElements[] = $loopIconText.':';
+    $checked = ($defaultLoop) ? 'checked' : '';
+    $iconElements[] = $loopIconText;
     $iconElements[] = '<input type="checkbox" name="loopCheck"'. $checked .'onclick="toggleLoop();">';
 }
 
